@@ -551,3 +551,6 @@
  
 - Wed Feb 25 2014 (andreas-fey)
   - Update on pilight module for more protocols 
+
+- Fri Mar 07 2014 (betateilchen)
+  - First officiel release of configDB via update process 
